Practise file created and some examples are done

--- a/files/index.html
+++ b/files/index.html
@@ -5,7 +5,13 @@
 </head>
 <body>
 
-<img src="images.jpeg" height="300"><br>
+
+
+
+<a href = "https://www.google.com/">Selim's Link</a> <br>   <!--Creating Link-->
+<a href = "https://www.cydeo.com/" target="_blank">Selim's Dashboard</a>  <!--Openning New Window-->
+
+<img src="images.jpeg" height="300"><br>  <!--Adding Image-->
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTra9YxjS4mWQln64GdVJLgAjQp39nbgD4skw&usqp=CAU", height="300px">
 
 <!--This is a comment line in html-->
@@ -60,10 +66,6 @@
     fuga ratione repellat sed. Commodi consectetur corporis fugiat, in iure molestiae perspiciatis repellendus voluptatibus?
     Eum, sequi?
 </p>
-
-
-
-
 
 <h1>This is h1 heading</h1>
 <h2>This is h2 heading</h2>
