Some examples are done

--- a/files/Practise.html
+++ b/files/Practise.html
@@ -5,11 +5,55 @@
 </head>
 <body>
 
+
+
+<table border="1px">  <!-- Basic Table Structure with Header -->
+    <thead bgcolor="red">
+    <tr>
+        <th>Name</th>
+        <th>Age</th>
+    </tr>
+    </thead>
+    <tbody bgcolor="green">
+    <tr>
+        <td>MuddyBuddy</td>
+        <td>2y</td>
+    </tr><tr>
+        <td>Fur-dinand</td>
+        <td>3y</td>
+    </tr><tr>
+        <td>Subwoofer</td>
+        <td>6m</td>
+    </tr>
+    </tbody>
+</table>
+
+
+<hr>
+<table> <!-- Basic Table Structure -->
+    <tr>
+        <td>15</td>
+        <td>10</td>
+        <td>30</td>
+    </tr>
+    <tr>
+        <td>45</td>
+        <td>60</td>
+        <td>45</td>
+    </tr>
+    <tr>
+        <td>60</td>
+        <td>90</td>
+        <td>100</td>
+    </tr>
+</table>
+
+
 <p>Car Reviews:</p>
 <ul>
-    <li><a href="KBB.com">KBB</a> </li>
-    <li><a href="EDMUNDS.com">EDMUNDS</a> </li>
-    <li><a href="CARMAX.com">CARMAX</a> </li>
+    <li><a href="https://www.kbb.com/" target="_blank">KBB</a> </li>
+    <li><a href="https://www.edmunds.com/" target="_blank">EDMUNDS</a> </li>
+    <li><a href="https://www.carmax.com/" target="_blank">CARMAX</a> </li>
 
 </ul>
 
