forms file created

--- a/files/index.html
+++ b/files/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:font-family="http://www.w3.org/1999/xhtml">
 <head>
     <title>Selim</title>
 </head>
 <body>
 
 
-<a href = "https://www.google.com/">Selim's Link</a> <br>   <!--Creating Link-->
-<a href = "https://www.cydeo.com/" target="_blank">Selim's Dashboard</a>  <!--Openning New Window-->
+<a href="https://www.google.com/">Selim's Link</a> <br>   <!--Creating Link-->
+<a href="https://www.cydeo.com/" target="_blank">Selim's Dashboard</a>  <!--Openning New Window-->
 
 <img src="images.jpeg" height="300"><br>  <!--Adding Image-->
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTra9YxjS4mWQln64GdVJLgAjQp39nbgD4skw&usqp=CAU", height="300px">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTra9YxjS4mWQln64GdVJLgAjQp39nbgD4skw&usqp=CAU" ,
+     height="300px">
 
 <!--This is a comment line in html-->
 <!--It will not be visible when you visit the page-->
@@ -48,26 +49,35 @@
 </p>
 
 
-
 <h1>My First Paragraph</h1>
 <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
     Beatae fuga non officia similique vitae, voluptate. <br>Ad at odio praesentium sequi sunt unde!
-    Eveniet expedita fugit, modi nihil omnis sed velit.<hr>
+    Eveniet expedita fugit, modi nihil omnis sed velit.
+<hr>
 </p>
 <h1>My Second Paragraph</h1>
 <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam consequatur distinctio facilis,
     fuga, laudantium nam numquam officia omnis optio, quae repudiandae similique sunt. Amet dolor nesciunt
     repellendus voluptatum. Iusto, quibusdam.
 </p>
-<h1>My Third Paragraph</h1>
-<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores corporis modi officia. Accusamus architecto
-    fuga ratione repellat sed. Commodi consectetur corporis fugiat, in iure molestiae perspiciatis repellendus voluptatibus?
-    Eum, sequi?
+<div style="background-color: aqua">
+    <h1>My Third Paragraph</h1>
+    <div style="font-family: 'Comic Sans MS'">
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores corporis modi officia. Accusamus
+            architecto
+            fuga ratione repellat sed. Commodi consectetur corporis fugiat, in iure molestiae perspiciatis repellendus
+            voluptatibus?
+            Eum, sequi?
+    </div>
+</div>
 </p>
 
-<h1>This is h1 heading</h1>
-<h2>This is h2 heading</h2>
-<h3>This is h3 heading</h3>
+<div style="font-family: 'Comic Sans MS'">
+    <h1>This is h1 heading</h1>
+    <h2>This is h2 heading</h2>
+    <h3>This is h3 heading</h3>
+</div>
+
 <h4>This is h4 heading</h4>
 <h5>This is h5 heading</h5>
 <h6>This is h6 heading</h6>
