--- a/files/Practise.html
+++ b/files/Practise.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-
+<h1>This is <span style="color: crimson">how</span> <span style="color: aqua">span works</span> </h1>
 
 <table border="1px">  <!-- Basic Table Structure with Header -->
     <thead bgcolor="red">
