--- a/files/forms.html
+++ b/files/forms.html
@@ -2,11 +2,28 @@
 <html lang="en">
 <head>
     <title>Form</title>
+    <style>
+        body {
+            background-color: #e5e2b1;
+        }
+        p {
+            background-color: yellowgreen;
+            font-size: 20px;
+            font-family: "Comic Sans MS";
+        }
+
+    </style>
+
+
+
 </head>
 <body>
 
-
 <form>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, consequuntur dicta dolor,
+        facilis fugiat fugit illo magnam officia omnis optio porro quasi quo reiciendis sunt tenetur ut vel veritatis vero.
+    </p>
     <p>
         Username:
         <input type="text" name="username">
