--- a/files/forms.html
+++ b/files/forms.html
@@ -2,18 +2,7 @@
 <html lang="en">
 <head>
     <title>Form</title>
-    <style>
-        body {
-            background-color: #e5e2b1;
-        }
-        p {
-            background-color: yellowgreen;
-            font-size: 20px;
-            font-family: "Comic Sans MS";
-        }
-
-    </style>
-
+    <link rel="stylesheet" href="css/styles.css">
 
 
 </head>
@@ -35,7 +24,7 @@
     <p>What did you think of this trip?</p>
     <textarea cols="35" rows="7" placeholder="Enter your comment here"></textarea>
     <br>
-    <p>Select your favorite food:</p>
+    <p class="class1">Select your favorite food:</p>
     <input type="radio" name="food" value="burger">Burger               <!--type and name need to be same, value need to be different to be able to choose only one-->
     <input type="radio" name="food" value="kabab" checked>Kabab
     <input type="radio" name="food" value="salad" disabled>Salad
