--- a/files/forms.html
+++ b/files/forms.html
@@ -45,14 +45,14 @@
     <input type="checkbox" name="course" value="softSkill">Soft Skill
     <p>Please select the program</p>
     <select name="course">
-        <option value="" disabled selected>Seelct a program</option>
+        <option value="" disabled selected>Select a program</option>
         <option value="jd">Java Developer</option>
         <option value="sdet">Java SDET</option>
         <option value="cb">Cyber Security</option>
     </select>
     <br>
     <br>
-    <input type="submit" value="Sign Up">
+    <input class="button-18" type="submit" value="Sign Up" id="signup">
 
 </form>
 
